<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="serif" />

        <EditText
            android:id="@+id/idTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@android:color/white"
            android:gravity="left|center_vertical"
            android:hint="@string/id"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="italic"
            android:typeface="serif" />


        <EditText
            android:id="@+id/nameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@android:color/white"
            android:gravity="left|center_vertical"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="20"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="italic"
            android:typeface="serif" />

        <EditText
            android:id="@+id/ppID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@android:color/white"
            android:gravity="left|center_vertical"
            android:hint="@string/ppname"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="italic"
            android:typeface="serif" />

        <EditText
            android:id="@+id/cstMssg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@android:color/white"
            android:gravity="left|center_vertical"
            android:hint="@string/cstmsg"
            android:inputType="text|textMultiLine"
            android:maxLength="120"
            android:maxLines="2"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="italic"
            android:typeface="serif" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/white"
            android:typeface="serif" />

        <TextView
            android:id="@+id/fn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:clickable="false"
            android:focusable="false"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:typeface="serif" />

        <RelativeLayout
            android:id="@+id/updBtn"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/loginbutton_selector"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/upload"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="normal"
                android:typeface="serif" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/submitBtn"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/loginbutton_selector"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/submit"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="normal"
                android:typeface="serif" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>